<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/chan_app"
        android:id="@+id/textView1"
        android:textSize="35sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/str1"
        android:id="@+id/textView2"
        android:textColor="#000000"
        android:textSize="35sp"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:text="@string/str3"
        android:id="@+id/button1"
        android:textSize="25sp"
        android:singleLine="false"/>

    <Button
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:text="@string/str4"
        android:id="@+id/button2"
        android:textSize="25sp"
        android:singleLine="false"
        android:onClick="onButton2Clicked" />

    <Button
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:text="@string/str7"
        android:id="@+id/button3"
        android:textSize="25sp"
        android:singleLine="false"
        android:onClick="onButton3Clicked" />

    <Button
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:text="@string/str2"
        android:id="@+id/button4"
        android:textSize="25sp"
        android:singleLine="false"
        android:onClick="onButton4Clicked" />

</LinearLayout>
