<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/chan_app"
        android:id="@+id/textView1"
        android:textSize="35sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/str5"
        android:id="@+id/textView2"
        android:textColor="#000000"
        android:textSize="35sp"
        android:layout_marginTop="10dp"/>

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="ID"
        android:id="@+id/idEditText"
        android:layout_marginLeft="30dp"
        android:textSize="30sp"
        android:password="true"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:text="@string/str6"
        android:id="@+id/loginbtn"
        android:layout_marginLeft="15dp"
        android:textSize="25sp"/>



</LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="password"
        android:id="@+id/passwordEditText"
        android:layout_marginLeft="30dp"
        android:textSize="30sp"
        android:password="true"/>

    </LinearLayout>